--- a/flask_auth_app/project/templates/index.html
+++ b/flask_auth_app/project/templates/index.html
@@ -1,8 +1,11 @@
+<!-- templates/index.html -->
+
 {% extends "base.html" %}
 
+<!--This file edits the landing page for the website -->
 {% block content %}
 <h1 class="title">
-  Flask Login Example
+  Assignment 2 4353
 </h1>
 <h2 class="subtitle">
   Easy authentication and authorization in Flask.
