--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -96,7 +96,7 @@
                     <input class="input is-large" type="text" name="ZipCode" placeholder="Zipcode">
                 </div>
             </div>
-
+			<input type="submit" value="Submit">
             </form>
 </section>
 {% endblock %}
