Added more features
-checks if data is empty
-displays message after data is entered
-displays data from database

Todo:
-create fuel data
-displays the users past fuel purchases

--- a/flask_auth_app/project/templates/index.html
+++ b/flask_auth_app/project/templates/index.html
@@ -8,6 +8,6 @@
   Assignment 2 4353
 </h1>
 <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+  Please login or register
 </h2>
 {% endblock %}
