Fuel Quote Data
made the tabular data page as well as full quote etc

--- a/flask_auth_app/project/templates/base.html
+++ b/flask_auth_app/project/templates/base.html
@@ -27,6 +27,11 @@
                             <a href="{{ url_for('main.profile') }}" class="navbar-item">
                                 Profile
                             </a>
+							{% endif %}
+							{% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.fuelquote') }}" class="navbar-item">
+                                Fuel Requests
+                            </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
