--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -9,6 +9,17 @@
 </h1>
 <section>
 <form method="POST" action="/profile">
+
+			{% with messages = get_flashed_messages() %}
+    		{% if messages %}
+				<div class="notification is-danger">
+      	  		{% for message in messages %}
+          		  <p>{{ message }}</p>
+       			 {% endfor %}
+				</div>
+   		 	{% endif %}
+			{% endwith %}
+
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="name" name="name" placeholder= "{{name}}" autofocus="">
@@ -22,6 +33,8 @@
 			The data is passed back into the profile page from the return statement in Auth.py under profile post
 			You can acess the parameter variable by using {{ variable }}
 			-->
+
+
 			{% if Address_1 is none %}
         		<div class="field">
              	   <div class="control">
