--- a/flask_auth_app/project/templates/fuelquote.html
+++ b/flask_auth_app/project/templates/fuelquote.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <section>
+
+    {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <div class="notification is-danger">
+                {{ messages[0] }}
+            </div>
+             {% endif %}
+            {% endwith %}
 <form method="POST" action="/fuelquote">
 			<h3 class="title">Fuel Quote Request</h3>
             <div class="field">
@@ -18,7 +26,7 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="deliverydate" name="deliverydate" placeholder="Delivery Date">
+                    <input class="input is-large" type="date" name="deliverydate" placeholder="Delivery Date">
                 </div>
             </div>
 			
@@ -31,7 +39,9 @@
 			-->
 
 
-			<input type="submit" value="Submit">
+			<input type="submit" name="submit" value="Submit">
+            <input type="submit" name="quote" value="Get Quote">
+
 			<h3> {{ pricestring }} </h3>
 			<h3> {{ amountduestring }} </h3>
             </form>
