--- a/flask_auth_app/project/templates/index.html
+++ b/flask_auth_app/project/templates/index.html
@@ -5,7 +5,7 @@
 <!--This file edits the landing page for the website -->
 {% block content %}
 <h1 class="title">
-  Assignment 2 4353
+  Completed Project <br> By Jairo Ledezma and Mark Martir Irizarry
 </h1>
 <h2 class="subtitle">
   Please login or register
